--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <span class="office me-2">
                 <img src="img/php.png" width="50px">
               </span>
-              <p class="lh-base m-0 fs-4">MS Office</p>
+              <p class="lh-base m-0 fs-4">Php</p>
             </div>
           </div>
         </div>
