--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </div>
             </div>
             <h1 class="fw-bold" style="color: #ff436c;">I'm Riyadi Fadli</h1>
-            <p class="content-text text-black-50">My full name is Riyadi, I was born on November 9, 1995, I really like
+            <p class="content-text text-black-50">My full name is Riyadi, I was born on November 9, I really like
               the world of information and technology, My motto upholds honesty and is guided by religious norms,
               </br>Im hard worker, able to work in individual and in team.</p>
             <a href="#" class="btn btn-danger fs-5 px-4 py-2 mt-2 text-light"><i class="fa fa-cloud-download me-2"
