--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="row">
               <div class="col-md-4 mb-2">
                 <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
+                  <img src="img/iPhone 8 Plus - 1.png" alt="img1" class="img-fluid img-thumbnail">
                 </div>
               </div>
               <div class="col-md-4 mb-2 d-none d-md-block">
