--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div id="Profile" class="profile text-center p-4 rounded-3 mb-3 shadow-sm" data-aos="zoom-in-up"
             data-aos-easing="linear">
             <div class="profil-wrapper d-flex justify-content-center">
-              <div class="stories">
+              <div class="stories" id="stories">
                 <img src="img/ava.jpg" alt="img">
                 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
                   style="enable-background:new -580 439 577.9 194;" xml:space="preserve">
@@ -70,11 +70,11 @@
                 </svg>
               </div>
             </div>
-            <h1 class="fw-bold" style="color: #ff436c;">I'm Riyadi Fadli</h1>
+            <h1 class="fw-bold" style="color: #043b5c;">I'm Riyadi Fadli</h1>
             <p class="content-text text-black-50">My full name is Riyadi, I was born on November 9, I really like
               the world of information and technology, My motto upholds honesty and is guided by religious norms,
               </br>Im hard worker, able to work in individual and in team.</p>
-            <a href="#" class="btn btn-danger fs-5 px-4 py-2 mt-2 text-light"><i class="fa fa-cloud-download me-2"
+            <a href="#" class="btn btn-blue fs-5 px-4 py-2 mt-2 text-light"><i class="fa fa-cloud-download me-2"
                 aria-hidden="true"></i>Download CV</a>
           </div>
         </div>
@@ -254,7 +254,7 @@
                   <textarea class="form-control" id="InputTextarea" rows="3"></textarea>
                 </div>
               </div>
-              <button type="submit" class="btn btn-danger text-light py-2 px-4">Submit</button>
+              <button type="submit" class="btn btn-blue text-light py-2 px-4">Submit</button>
             </form>
           </div>
         </div>
@@ -270,11 +270,26 @@
   <script>
     AOS.init();
 
-    var hamburger = document.getElementById("hamburger");
+    const hamburger = document.getElementById("hamburger");
 
     hamburger.addEventListener("click", function () {
       this.classList.toggle("is-active");
-    })
+    });
+
+    const ava = document.getElementById("stories");
+    const sw = document.querySelector('.stories svg');
+
+    ava.addEventListener("click", function () {
+      const running = sw.style.animationPlayState === 'running';
+      // sw.style.animationPlayState = running ? 'paused' : 'running';
+      if(!running) {
+          sw.style.animationPlayState = 'running';
+      } else{
+          sw.style.animationFillMode = "forwards";
+          sw.style.animationPlayState = 'paused';
+      }
+    });
+
   </script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
