--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,6 +18,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/hamburgers.css">
   <link rel="stylesheet" href="css/style.css">
+
   <title>Portfolio</title>
 </head>
 
@@ -114,29 +116,21 @@
         <div class="col-md-6">
           <div id="Skill" class="skill p-4 rounded-3 mb-3" data-aos="fade-up">
             <h5 class="fw-bold mb-4">Skills</h5>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center">
-              <span class="office me-2">
-                <img src="img/microsoft.png" width="50px">
-              </span>
-              <p class="lh-base m-0 fs-4">MS Office</p>
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+              <i class="bi bi-windows me-3 fs-4"></i>
+              <p class="lh-base m-0">MS Office</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center">
-              <span class="office me-2">
-                <img src="img/html.png" width="50px">
-              </span>
-              <p class="lh-base m-0 fs-4">Html</p>
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+              <i class="bi bi-filetype-html me-3 fs-4"></i>
+              <p class="lh-base m-0">Html</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center">
-              <span class="office me-2">
-                <img src="img/javascript.png" width="50px">
-              </span>
-              <p class="lh-base m-0 fs-4">Javacsript</p>
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+              <i class="bi bi-filetype-js me-3 fs-4"></i>
+              <p class="lh-base m-0">Javacsript</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center">
-              <span class="office me-2">
-                <img src="img/php.png" width="50px">
-              </span>
-              <p class="lh-base m-0 fs-4">Php</p>
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+              <i class="bi bi-filetype-php me-3 fs-4"></i>
+              <p class="lh-base m-0">Php</p>
             </div>
           </div>
         </div>
@@ -153,7 +147,7 @@
           </div>
         </div>
       </div>
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false" data-bs-touch="true">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
             class="active bg-danger" aria-current="true" aria-label="Slide 1"></button>
@@ -167,17 +161,90 @@
             <div class="row">
               <div class="col-md-4 mb-2">
                 <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
+                  <div class="card">
+                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
+                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
+                  <div class="card">
+                    <a href="https://lambent-faun-035400.netlify.app/" target="_blank">
+                      <img src="img/web2.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Netflix Clone</a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
+                  <div class="card">
+                    <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" target="_blank">
+                      <img src="img/web3.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">UI Design: Rental Motor</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item mb-5">
+            <div class="row">
+              <div class="col-md-4 mb-2 d-none d-md-block">
+                <div class="portfolio-items">
+                  <div class="card">
+                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
+                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-2">
+                <div class="portfolio-items">
+                  <div class="card">
+                    <a href="https://lambent-faun-035400.netlify.app/" target="_blank">
+                      <img src="img/web2.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Netflix Clone</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-2 d-none d-md-block">
+                <div class="portfolio-items">
+                  <div class="card">
+                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
+                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -186,36 +253,44 @@
             <div class="row">
               <div class="col-md-4 mb-2">
                 <div class="portfolio-items">
-                  <img src="img/fl2.png" alt="img1" class="img-fluid img-thumbnail">
+                  <div class="card">
+                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
+                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
-                  <img src="img/fl2.png" alt="img1" class="img-fluid img-thumbnail">
+                  <div class="card">
+                    <a href="https://lambent-faun-035400.netlify.app/" target="_blank">
+                      <img src="img/web2.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Netflix Clone</a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
-                  <img src="img/fl2.png" alt="img1" class="img-fluid img-thumbnail">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item mb-5">
-            <div class="row">
-              <div class="col-md-4 mb-2">
-                <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
-                </div>
-              </div>
-              <div class="col-md-4 mb-2 d-none d-md-block">
-                <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
-                </div>
-              </div>
-              <div class="col-md-4 mb-2 d-none d-md-block">
-                <div class="portfolio-items">
-                  <img src="img/fl1.png" alt="img1" class="img-fluid img-thumbnail">
+                  <div class="card">
+                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
+                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                      <p class="card-text">
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -264,8 +339,8 @@
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
   <script src="https://kit.fontawesome.com/f4fd6a797f.js" crossorigin="anonymous"></script>
   <script>
     AOS.init();
@@ -282,14 +357,13 @@
     ava.addEventListener("click", function () {
       const running = sw.style.animationPlayState === 'running';
       // sw.style.animationPlayState = running ? 'paused' : 'running';
-      if(!running) {
-          sw.style.animationPlayState = 'running';
-      } else{
-          sw.style.animationFillMode = "forwards";
-          sw.style.animationPlayState = 'paused';
+      if (!running) {
+        sw.style.animationPlayState = 'running';
+      } else {
+        sw.style.animationFillMode = "forwards";
+        sw.style.animationPlayState = 'paused';
       }
     });
-
   </script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
