--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         </div>
         <!-- SKILL -->
         <div class="col-md-6">
-          <div id="Skill" class="skill p-4 rounded-3 mb-3" data-aos="fade-up">
+          <div id="Skill" class="skill p-4 rounded-3 mb-3">
             <h5 class="fw-bold mb-4">Skills</h5>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white" data-aos="fade-up">
               <i class="bi bi-windows me-3 fs-4"></i>
               <p class="lh-base m-0">MS Office</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white" data-aos="fade-up">
               <i class="bi bi-filetype-html me-3 fs-4"></i>
               <p class="lh-base m-0">Html</p>
             </div>
@@ -128,7 +128,7 @@
               <i class="bi bi-filetype-js me-3 fs-4"></i>
               <p class="lh-base m-0">Javacsript</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white" data-aos="fade-up">
               <i class="bi bi-filetype-php me-3 fs-4"></i>
               <p class="lh-base m-0">Php</p>
             </div>
