--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
                   <textarea class="form-control" id="InputTextarea" rows="3"></textarea>
                 </div>
               </div>
-              <button type="submit" class="btn btn-blue text-light py-2 px-4">Submit</button>
+<a href="https://api.whatsapp.com/send?phone=087755369035" class="btn btn-blue text-light py-2 px-4">Submit</a>
+
             </form>
           </div>
         </div>
