--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <i class="bi bi-filetype-html me-3 fs-4"></i>
               <p class="lh-base m-0">Html</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white">
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-white" data-aos="fade-up">
               <i class="bi bi-filetype-js me-3 fs-4"></i>
               <p class="lh-base m-0">Javacsript</p>
             </div>
@@ -329,7 +329,7 @@
                   <textarea class="form-control" id="InputTextarea" rows="3"></textarea>
                 </div>
               </div>
-<a href="https://api.whatsapp.com/send?phone=087755369035" class="btn btn-blue text-light py-2 px-4">Submits</a>
+<a href="https://api.whatsapp.com/send?phone=087755369035" class="btn btn-blue text-light py-2 px-4">Submit</a>
 
             </form>
           </div>
