--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                   <textarea class="form-control" id="InputTextarea" rows="3"></textarea>
                 </div>
               </div>
-<a href="https://api.whatsapp.com/send?phone=087755369035" class="btn btn-blue text-light py-2 px-4">Submit</a>
+<a href="https://api.whatsapp.com/send?phone=+6287755369035" class="btn btn-blue text-light py-2 px-4">Submit</a>
 
             </form>
           </div>
