--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
               </div>
             </div>
             <h1 class="fw-bold" style="color: #043b5c;">I'm Riyadi</h1>
-            <p class="content-text text-black-50">My full name is Riyadi Fadli, I was born on November 9, I really like
-              the world of information and technology, My motto upholds honesty and is guided by religious norms,
-              </br>Im hard worker, able to work in individual and in team.</p>
+            <p class="content-text text-black-50"></p>
             <a href="#" class="btn btn-blue fs-5 px-4 py-2 mt-2 text-light"><i class="fa fa-cloud-download me-2"
                 aria-hidden="true"></i>Download CV</a>
           </div>
