--- a/index.html
+++ b/index.html
@@ -366,9 +366,7 @@
     });
 
 new TypeIt("#contentText", {
-  strings: "My full name is Riyadi Fadli, I was born on November 9", "I really like
-              the world of information and technology", "My motto upholds honesty and is guided by religious norms",
-              "Im hard worker", "able to work in individual and in team.",
+  strings: [" Hello world."],
   speed: 50,
   waitUntilVisible: true,
 }).go();
