--- a/index.html
+++ b/index.html
@@ -365,6 +365,12 @@
       }
     });
 
+new TypeIt("#simpleUsage", {
+  strings: "This is a simple string.",
+  speed: 50,
+  waitUntilVisible: true,
+}).go();
+
 
   </script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
