--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       }
     });
 
-new TypeIt("#simpleUsage", {
+new TypeIt("#contentText", {
   strings: "This is a simple string.",
   speed: 50,
   waitUntilVisible: true,
