--- a/index.html
+++ b/index.html
@@ -366,7 +366,11 @@
     });
 
 new TypeIt("#contentText", {
-  strings: "This is a simple string.",
+  strings: ["My full name is Riyadi Fadli", 
+"I was born on November 9", 
+"I really likethe world of information and technology", 
+"My motto upholds honesty and is guided by religious norms",
+"Im hard worker, able to work in individual and in team"],
   speed: 50,
   waitUntilVisible: true,
 }).go();
