--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ new TypeIt("#contentText", {
 "I was born on November 9", 
 "I really likethe world of information and technology", 
 "My motto upholds honesty and is guided by religious norms",
-"Im hard worker, able to work in individual and in team"],
+"Im hard worker able to work in individual and in team"],
   speed: 50,
   waitUntilVisible: true,
 }).go();
