--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@
     });
 
 new TypeIt("#contentText", {
-  strings: ["My full name is Riyadi Fadli"],
+  strings: ["My full name is Riyadi Fadli",
+"I was born on November 9"],
   speed: 50,
   waitUntilVisible: true,
 }).go();
