--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
 
 new TypeIt("#contentText", {
   strings: ["My full name is Riyadi Fadli",
-"I was born on November 9"],
+"I was born on November", "I really like
+the world of information and technology, "My motto upholds honesty and is guided by religious norms&#44; Im hard worker, able to work in individual and in team"],
   speed: 50,
   waitUntilVisible: true,
 }).go();
