--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@ new TypeIt("#contentText", {
 the world of information and technology, "My motto upholds honesty and is guided by religious norms&#44; Im hard worker, able to work in individual and in team"],
   speed: 50,
   waitUntilVisible: true,
+  loop: true,
 }).go();
 
 
