--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
     });
 
 new TypeIt("#contentText", {
-  strings: ["My full name is Riyadi Fadli",
-"I was born on November", "I really like
-the world of information and technology"],
+  strings: [`My full name is Riyadi Fadli`,
+`I was born on November<br />I really like
+the world of information and technology`],
   speed: 50,
   waitUntilVisible: true,
   loop: true,
