--- a/index.html
+++ b/index.html
@@ -367,11 +367,10 @@
 
 new TypeIt("#contentText", {
   strings: [`My full name is Riyadi Fadli`,
-`I was born on November<br />I really like
+`I was born on November 9<br />I really like
 the world of information and technology`],
   speed: 50,
   waitUntilVisible: true,
-  loop: true,
 }).go();
 
 
