--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
     });
 
 new TypeIt("#contentText", {
-  strings: [`My full name is Riyadi Fadli`,
-`I was born on November 9<br />I really like
-the world of information and technology, `],
+  strings: [`My full name is Riyadi Fadli, `,
+`I was born on November 9.<br />I really like
+the world of information and technology `],
   speed: 50,
   waitUntilVisible: true,
 }).go();
