--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     });
 
 new TypeIt("#contentText", {
-  strings: [`My full name is Riyadi Fadli.` `Based on my educational background in computer science and expertise in web development, I have created attractive and functional responsive websites. `],
+  strings: [`Based on my educational background in computer science and expertise in web development.`,`I have created attractive and functional responsive websites.`],
   speed: 50,
   waitUntilVisible: true,
 }).go();
