--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </svg>
               </div>
             </div>
-            <h1 class="fw-bold" style="color: #043b5c;">Hello👋🏻,I'm Riyadi</h1>
+            <h1 class="fw-bold" style="color: #043b5c;">Hello<span class="emote">👋🏻</span>,I'm Riyadi</h1>
             <p id="contentText" class="content-text text-black-50"></p>
             <a href="#" class="btn btn-blue fs-5 px-4 py-2 mt-2 text-light"><i class="fa fa-cloud-download me-2"
                 aria-hidden="true"></i>Download CV</a>
