--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- SKILL -->
         <div class="col-md-6">
           <div id="Skill" class="skill p-4 rounded-3 mb-3">
-            <h5 class="fw-bold mb-4">Skills</h5>
+            <h5 class="fw-bold mb-4" data-aos="zoom-in">Skills</h5>
             <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-blur" data-aos="fade-up">
               <i class="bi bi-windows me-3 fs-4"></i>
               <p class="lh-base m-0">MS Office</p>
@@ -328,7 +328,8 @@
                 </div>
               </div>
 <a href="https://api.whatsapp.com/send?phone=+6287755369035" class="btn btn-blue text-light py-2 px-4">Submit</a>
-
+
+
             </form>
           </div>
         </div>
