--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
                   <div class="card">
-                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
-                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" target="_blank">
+                      <img src="img/web3.png" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">UI Design: Rental Motor</a>
                       </p>
                     </div>
                   </div>
@@ -249,7 +249,7 @@
           </div>
           <div class="carousel-item mb-5">
             <div class="row">
-              <div class="col-md-4 mb-2">
+              <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
                   <div class="card">
                     <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
@@ -277,15 +277,15 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 mb-2 d-none d-md-block">
+              <div class="col-md-4 mb-2">
                 <div class="portfolio-items">
                   <div class="card">
-                    <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" target="_blank">
-                      <img src="img/web1.png" class="card-img-top" alt="...">
+                    <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" target="_blank">
+                      <img src="img/web3.png" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">UI Design: Rental Motor</a>
                       </p>
                     </div>
                   </div>
