--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
             <ul class="timeline">
               <li>
                 <p class="fw-bold text-dark">Bachelor (S1) Degree</p>
-                <p>Teknik Informatika , STIKOM SAPTA COMPUTER BALANGAN (2014 - 2018)</p>
+                <p>Teknik Informatika , STIKOM SAPTA COMPUTER BALANGAN</p>
               </li>
               <li>
                 <p class="fw-bold text-dark">Senior High School</p>
-                <p>IPS , Madrasah Aliyah Negeri 2 Amuntai (2010-2012)</p>
+                <p>IPS , Madrasah Aliyah Negeri 2 Amuntai</p>
               </li>
               <li>
                 <p class="fw-bold text-dark">Junior High School</p>
-                <p>Madrasah Tsanawiya Negri Model Amuntai (2007-2009)</p>
+                <p>Madrasah Tsanawiya Negri Model Amuntai</p>
               </li>
               <li>
                 <p class="fw-bold text-dark">Elementary School</p>
-                <p>SDN Tanah Habang Kiri (2000-2006)</p>
+                <p>SDN Tanah Habang Kiri</p>
               </li>
             </ul>
           </div>
