--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active mb-5">
-            <div class="row">
+            <div class="row text-center">
               <div class="col-md-4 mb-2">
                 <div class="portfolio-items">
                   <div class="card">
