--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
           </div>
           <div class="carousel-item mb-5">
-            <div class="row">
+            <div class="row text-center">
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
                   <div class="card">
@@ -248,7 +248,7 @@
             </div>
           </div>
           <div class="carousel-item mb-5">
-            <div class="row">
+            <div class="row text-center">
               <div class="col-md-4 mb-2 d-none d-md-block">
                 <div class="portfolio-items">
                   <div class="card">
