--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="row">
         <!-- EDUCATION -->
         <div class="col-md-6">
-          <div id="Education" class="education p-4 rounded-3 mb-3 shadow-sm" data-aos="fade-up">
+          <div id="Education" class="education p-4 rounded-3 mb-3 shadow-sm bg-blur" data-aos="fade-up">
             <h5 class="fw-bold mb-4">Education</h5>
             <ul class="timeline">
               <li>
@@ -126,7 +126,7 @@
               <i class="bi bi-filetype-js me-3 fs-4"></i>
               <p class="lh-base m-0">Javacsript</p>
             </div>
-            <div class="skill-group mb-3 shadow-sm rounded-4 d-flex p-4 align-items-center bg-blur" data-aos="fade-up">
+            <div class="skill-group mb-3 shadow-sm rounded-2 d-flex p-4 align-items-center bg-blur" data-aos="fade-up">
               <i class="bi bi-filetype-php me-3 fs-4"></i>
               <p class="lh-base m-0">Php</p>
             </div>
