--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
                       </p>
                     </div>
                   </div>
@@ -179,7 +179,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Netflix Clone</a>
+                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; font-weight: bold;">Landing Page: Netflix Clone</a>
                       </p>
                     </div>
                   </div>
@@ -193,7 +193,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">UI Design: Rental Motor</a>
+                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; font-weight: bold;">UI Design: Rental Motor</a>
                       </p>
                     </div>
                   </div>
@@ -211,7 +211,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
                       </p>
                     </div>
                   </div>
@@ -225,7 +225,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Netflix Clone</a>
+                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; font-weight: bold;">Landing Page: Netflix Clone</a>
                       </p>
                     </div>
                   </div>
@@ -239,7 +239,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">UI Design: Rental Motor</a>
+                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; font-weight: bold;">UI Design: Rental Motor</a>
                       </p>
                     </div>
                   </div>
@@ -257,7 +257,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
+                        <a href="https://lighthearted-caramel-e0f5f6.netlify.app/" style="color: #043b5c; text-decoration: none; font-weight: bold;">Landing Page: Warung Ayam Goreng</a>
                       </p>
                     </div>
                   </div>
@@ -271,7 +271,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">Landing Page: Netflix Clone</a>
+                        <a href="https://lambent-faun-035400.netlify.app/" style="color: #043b5c; text-decoration: none; font-weight: bold;">Landing Page: Netflix Clone</a>
                       </p>
                     </div>
                   </div>
@@ -285,7 +285,7 @@
                     </a>
                     <div class="card-body">
                       <p class="card-text">
-                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; text-decoration: underline; font-weight: bold;">UI Design: Rental Motor</a>
+                        <a href="https://www.figma.com/file/8spzFc8Sb4CqfFgENe1jIu/Untitled?type=design&node-id=208%3A62&mode=design&t=HxPTydSgfxtqP8zD-1" style="color: #043b5c; text-decoration: none; font-weight: bold;">UI Design: Rental Motor</a>
                       </p>
                     </div>
                   </div>
