--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     placeholder="Message"></textarea>
                 </div>
               </div>
-              <a id="whatsapp-link" href="" target="_blank" class="btn btn-blue text-light py-2 px-4">Submit</a>
+              <a id="whatsappLink" href="" target="_blank" class="btn btn-blue text-light py-2 px-4">Submit</a>
 
             </form>
           </div>
@@ -471,14 +471,13 @@
       speed: 50,
       waitUntilVisible: true,
     }).go();
-  </script>
-  <script>
+
     document.getElementById('whatsapp-form').addEventListener('submit', function (event) {
       event.preventDefault();
 
-      const nama = document.getElementById('name').value;
-      const phone = document.getElementById('phone').value;
-      const pesan = document.getElementById('message').value;
+      var nama = document.getElementById('name').value;
+      var phone = document.getElementById('phone').value;
+      var pesan = document.getElementById('message').value;
 
 
       var nomorWhatsApp = '6287755369035';
@@ -488,11 +487,12 @@
         pesan);
 
 
-      document.getElementById('whatsapp-link').setAttribute('href', whatsappLink);
+      document.getElementById('whatsappLink').setAttribute('href', whatsappLink);
 
       window.open(whatsappLink, '_blank');
     });
   </script>
+
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
