--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             data-aos-easing="linear">
             <div class="profil-wrapper d-flex justify-content-center">
               <div class="stories" id="stories">
-                <img src="img/ava.jpg" alt="img" class="img-stories object-fit-cover" style="object-fit: cover;">
+                <img src="img/M.jpg" alt="img" class="img-stories object-fit-cover" style="object-fit: cover;">
                 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
                   style="enable-background:new -580 439 577.9 194;" xml:space="preserve">
                   <circle cx="50" cy="50" r="40" />
